# embarc_mli

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  Makefile  README.md  index.html
examples/: CMakeLists.txt
examples/auxiliary/: examples_aux.c  examples_aux.h  gnu_support_aux.c  idx_file.c  idx_file.h  tensor_transform.c  tensor_transform.h  tests_aux.c  tests_aux.h
examples/example_cifar10_caffe/: CMakeLists.txt  Makefile  README.md  arcem9d.lcf  cifar10_coefficients_chw_big.c  cifar10_coefficients_chw_small.c  cifar10_coefficients_hwcn_small.c  cifar10_constants.h  cifar10_model.h  cifar10_model_chw.c  cifar10_model_hwcn.c  cifar10_ref_inout.h  mdb_com_gnu  memory.x  ml_api_cifar10_caffe_main.c
examples/example_cifar10_caffe/ir_idx_12_chw_big/: ir_conv1.idx  ir_conv2.idx  ir_conv3.idx  ir_data.idx  ir_ip1.idx  ir_ip2.idx  ir_pool1.idx  ir_pool2.idx  ir_pool3.idx  ir_prob.idx
examples/example_cifar10_caffe/ir_idx_12_chw_small/: ir_conv1.idx  ir_conv2.idx  ir_conv3.idx  ir_ip1.idx  ir_pool1.idx  ir_pool2.idx  ir_pool3.idx  ir_prob.idx
examples/example_cifar10_caffe/ir_idx_12_hwcn_small/: ir_conv1.idx  ir_conv2.idx  ir_conv3.idx  ir_pool1.idx  ir_pool2.idx  ir_pool3.idx
examples/example_cifar10_caffe/small_test_base/: labels.idx  tests.idx
examples/example_face_detect/: CMakeLists.txt  Makefile  README.md  bmp_file_io.c  bmp_file_io.h  face_detect_module.cc  face_detect_module.h  face_trigger_constants.h  face_trigger_model.c  face_trigger_model.h  idx_cmp.py  main.c  main.cc  mdb_com_gnu  sliding_scan.c  sliding_scan.h
examples/example_face_detect/model/: anchors.cc  defs.h  idx_file.cc  model.cc  model.h  postprocess.cc  postprocess.h  util.cc  util.h  weights.cc  weights.h
examples/example_har_smartphone/: CMakeLists.txt  Makefile  README.md  arcem9d.lcf  har_smartphone_coefficients.c  har_smartphone_coefficients_fx.c  har_smartphone_coefficients_sa.c  har_smartphone_constants.h  har_smartphone_model.c  har_smartphone_model.h  har_smartphone_model_fx.c  har_smartphone_model_sa.c  har_smartphone_ref_inout.h  mdb_com_gnu  memory.x  ml_api_har_smartphone_main.c
examples/example_har_smartphone/ir_idx_300/: ir_fc1.idx  ir_fc4.idx  ir_in.idx  ir_lstm2.idx  ir_lstm3.idx  ir_relu1.idx
examples/example_har_smartphone/small_test_base/: tests.idx
examples/example_kws_speech/: CMakeLists.txt  Makefile  README.md  main.cc  simple_kws_postprocessor.cc  simple_kws_postprocessor.h  wav_file_guard.cc  wav_file_guard.h
examples/example_kws_speech/audio_features/: audio_features.cc  audio_features.h
examples/example_kws_speech/kws/: kws_factory.h  kws_module.h  kws_types.h
examples/hello_world/: CMakeLists.txt  README.md  main.cpp
examples/hello_world/make/: Makefile
examples/prebuilt/: README.md
examples/tutorial_cifar10_caffe_deployment/: README.md  cifar10_small.caffemodel.h5  cifar10_small.prototxt  deployment_main.py  deployment_steps.py  mli_fxtools.py
examples/tutorial_emnist_tensorflow/: CMakeLists.txt  Makefile  README.md  example.ipynb  ml_api_emnist_tensorflow_main.c  mli_cnn_bn.h5  requirements.txt  widgets_def.py
examples/tutorial_emnist_tensorflow/.ipynb_checkpoints/: example-checkpoint.ipynb
examples/tutorial_emnist_tensorflow/emnist_keras_deployment/: constants.py  deployment_steps.py  file_writer.py  mli_fxtools.py
examples/tutorial_emnist_tensorflow/model/: emnist_coefficients_hwcn_small.c  emnist_constants.h  emnist_model.h  emnist_model_hwcn.c  emnist_ref_inout.h
examples/tutorial_emnist_tflm/: CMakeLists.txt  Makefile  README.md
examples/tutorial_emnist_tflm/conversion_tutorial/: README.md  model_conversion.ipynb  model_convertion.ipynb  requirements.txt
examples/tutorial_emnist_tflm/example_emnist_tflm/: model_settings.cc  model_settings.h  test_samples.cc  test_samples.h
examples/tutorial_emnist_tflm/src/: main.cc  model.h  model_settings.cc  model_settings.h  test_samples.cc  test_samples.h
examples/tutorial_mobilenet_v1/: Makefile  emsdp.lcf
examples/tutorial_mobilenet_v1/conversion_tutorial/: mobilenet_v1.tflite  model_conversion_mobilenet.ipynb  requirements.txt
examples/tutorial_mobilenet_v1/src/: main.cc  model_settings.h
examples/tutorial_mobilenet_v2/conversion_tutorial/: mobilenet_v2.tflite  model_conversion_mobilenet.ipynb
examples/tutorial_mobilenet_v2/src/: jpgd.cc  main.cc  mobilenet_labels.h  model_settings.h
lib/: CMakeLists.txt  mli_lib.cmake
lib/cmake/: mliConfig.cmake
lib/make/: makefile  package.mk  settings.mk
lib/src/bricks/: mli_krn_dotprod.h  mli_krn_dotprod_decl.h  mli_krn_dotprod_deprecated.h  mli_krn_reduce_max2d.h  mli_krn_reduce_max2d_decl.h  mli_krn_reduce_sum2d.h  mli_krn_reduce_sum2d_decl.h  mli_krn_rnn_dense_op.h  mli_krn_rnn_dense_op_decl.h  mli_prv_lut.cc  mli_prv_lut.h  mli_prv_lut_decl.h  mli_prv_quant.h  mli_prv_quant_decl.h
lib/src/helpers/: mli_hlp_convert_tensor_decl.h
lib/src/move/: mli_mov.h  mli_mov_api.c  mli_mov_api.cc  mli_mov_compiler.cc  mli_mov_decl.h  mli_mov_private_types.h  mli_mov_runtime.cc  mli_move_broadcast_compiler.cc  mli_move_broadcast_runtime.cc
lib/src/pal/: mli_math.h  mli_mem_info.h  mli_prv_dsp.h  mli_prv_load_store.h
lib/src/private/: mli_check.h  mli_debug.h  mli_math.h  mli_math_macros.h  mli_private_types.h  mli_prv_activation_lut.h  mli_prv_aux_calc.h  mli_prv_dsp.h  mli_prv_layout.h  mli_prv_load_store.h  mli_prv_lut.h  mli_prv_quant.h  mli_prv_tensor.h
user_tests/: CMakeLists.txt  README.md
user_tests/make/: Makefile
user_tests/test_components/: test_crc32_calc.cc  test_crc32_calc.h  test_infra.cc  test_infra.h  test_memory_manager.cc  test_memory_manager.h  test_metrics.cc  test_metrics.h  test_quality_metrics.cc  test_quality_metrics.h  test_quantizer.cc  test_quantizer.h  test_report.cc  test_report.h  test_rescale_utility.cc  test_rescale_utility.h  test_tensor_quantizer.cc  test_tensor_quantizer.h  test_tiling.cc  test_tiling.hpp
user_tests/tests/mli_hlp_convert_tensor/: tests_mli_hlp_convert_tensor.cc  vectors_mli_hlp_convert_tensor.inc
user_tests/tests/mli_hlp_tensor_struct/: tests_mli_hlp_tensor_struct.cc  (+1 more)
(+510 files in other folders)
